# badho-search

./: .env.example  .gitignore  DOCKER_README.md  Dockerfile  NETWORKING.md  README.md  app.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup-ollama.sh
scripts/: build_index.py  search_cli.py  test_brand_phonetic.py
src/badho_search/: config.py  database.py  embeddings.py  hybrid_search.py  index_build.py
templates/: search.html
