[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "badho-search"
version = "0.1.0"
description = "FAISS + Ollama hybrid search prototype"
authors = [{ name = "Badho", email = "dev@example.com" }]
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"] 